data/derived/sp14/progs/unify/prog1950.ml.out
Characters 71-74:
  let stringOfList f l = sepConcat "; " (List.append ("["::List.map f l) "]");;
                                                                         ^^^
Error: This expression has type string but an expression was expected of type
         string list
